# Sworm

./: .gitattributes  .gitignore  .mcp.json  .prettierignore  .prettierrc  CLAUDE.md  COMMITS.md  README.md  SESSION_RECOVERY.md  TODO.md  bun.nix  flake.nix  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/builtins/dev.sworm.biome/: builtin.json  settings.schema.json
src-tauri/builtins/dev.sworm.css/: builtin.json  settings.schema.json
src-tauri/builtins/dev.sworm.html/: builtin.json  settings.schema.json
src-tauri/builtins/dev.sworm.nix/: builtin.json  settings.schema.json
src-tauri/builtins/dev.sworm.svelte/: builtin.json  settings.schema.json
src-tauri/builtins/dev.sworm.tailwind/: builtin.json  settings.schema.json
src-tauri/builtins/dev.sworm.vtsls/: builtin.json  settings.schema.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: V1__initial.sql  V2__mcp_skills_credentials.sql  V3__nix_envs.sql  V4__session_archive.sql  V5__workspace_state.sql  V6__app_state.sql  V7__session_entries_index.sql  V8__lsp_server_configs.sql
src-tauri/src/: app_state.rs  errors.rs  lib.rs  main.rs
src-tauri/src/commands/: activity_map.rs  app.rs  builtins.rs  config_schemas.rs  dnd.rs  editor.rs  files.rs  formatting.rs  fresh.rs  git.rs  lsp.rs  mod.rs  nix.rs  projects.rs  providers.rs  pty.rs  sessions.rs  settings.rs  tasks.rs  transcript.rs  workspace.rs
src-tauri/src/models/: activity_map.rs  builtins.rs  file_diff.rs  lsp.rs  mod.rs  nix_env.rs  project.rs  provider.rs  session.rs  task.rs
(+545 files in other folders)
